可以从文件中读取shader

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,5 +9,15 @@ ViewportId=0x59819E39
 Size=550,612
 Collapsed=0
 
+[Window][Mesh]
+Pos=60,60
+Size=132,547
+Collapsed=0
+
+[Window][Settings]
+Pos=226,1
+Size=121,203
+Collapsed=0
+
 [Docking][Data]
 
