--- a/imgui.ini
+++ b/imgui.ini
@@ -10,26 +10,21 @@ Size=550,612
 Collapsed=0
 
 [Window][Mesh]
-Pos=1483,27
+ViewportPos=1722,300
+ViewportId=0xCEFD1697
 Size=132,803
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Settings]
-Pos=8,832
+ViewportPos=247,1105
+ViewportId=0xF9F8AA99
 Size=1607,203
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1623,1043
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=531,233 Size=1607,1008 Split=Y
-  DockNode    ID=0x00000001 Parent=0xC0DFADC4 SizeRef=1264,480 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=1130,685 CentralNode=1
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=132,685 Selected=0x70087ADF
-  DockNode    ID=0x00000002 Parent=0xC0DFADC4 SizeRef=1264,203 Selected=0x4746B4B8
+DockSpace ID=0xC0DFADC4 Pos=531,233 Size=1607,1008 CentralNode=1
 
